--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
   	<link rel="shortcut icon" href="images/favicon.ico" />
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+	<link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" />
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/animate.css" />
@@ -24,15 +25,15 @@
 
 	<form id="todoBox" class="col-sm-6 col-sm-offset-3">
 		<h1>Comment and Image App</h1>
-		<input id="user-input" type="text" placeholder="user input">
-		<input id="image-link" type="text" placeholder="place image URL here">
-		<textarea id="comment" cols="50" rows="15"></textarea>
-		<button type="button" onclick="todoList()" class="btn btn-primary">submit</button>
+		<input id="user-input" type="text" placeholder="description">
+		<input id="image-link" type="text" placeholder="place image URL link here">
+		<textarea id="comment" cols="50" rows="15" placeholder="comments"></textarea>
+		<button type="button" onclick="commentList()" class="btn btn-primary">submit</button>
 	</form>
 
 </div>
 
-<div id="display">
+<div id="display" class="col-sm-6 col-sm-offset-3">
 	
 </div>
 
