--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<input id="user-input" type="text" placeholder="description">
 		<input id="image-link" type="text" placeholder="place image URL link here">
 		<textarea id="comment" cols="50" rows="15" placeholder="comments"></textarea>
-		<button type="button" onclick="commentList()" class="btn btn-primary">submit</button>
+		<button type="button" onclick="commentList()" class="btn btn-primary">SUBMIT</button>
 	</form>
 
 </div>
